# FastAPIMongoDBTest

./: Makefile  README.md  docker-compose-dev.yaml  environ.py  pyproject.toml  requirements.txt
src/: database.py  main.py
src/utils/: db_fill.py  utils.py  validators.py
tests/: test.py
